--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<Document Type Doc>
-<Head>
-  <Title> Stephen He </Title>
-  </Head>
+<!doctype html>
+<html>
+<head> 
+        <title>Stephen He</title>
+</head>
+</html>
