--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@
 <head>
 	<title>Stephen He</title>
     </head>
+<body>
+    <div class = "container">
+        <h1>ABOUT ME</h1>
+        <p> Hi, I'm Stephen and this is the start </p>
+    </div>
+</body>
 </html>
