--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div class = "container">
         <h1>ABOUT ME</h1>
         <p> Hi, I'm Stephen and this is the start </p>
+        <a href="./"></a>
     </div>
 </body>
 </html>
