--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
-<head>
-	<title>Stephen He</title>
+    <head>
+	    <title>Stephen He</title>
+        <link rel = "stylesheet" type = "text/css" href = "style.css"/>
     </head>
-<body>
-    <div class = "container">
-        <h1>ABOUT ME</h1>
-        <p> Hi, I'm Stephen and this is the start </p>
-        <a href="./"></a>
-    </div>
+    <body>
+        <div class = "container">
+            <h1>ABOUT ME</h1>
+            <p> Hi, I'm Stephen and this is the start </p>
+            <a href="./"></a>
+        </div>
 </body>
 </html>
